--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
 
             <form method='post' action="/shortener/" id="form" target="noredirect">
                 <input type="text" class="originalLink" placeholder="Link ..." name="long_url">
-                <h3 id="xyz" style="color: rgb(236, 236, 236);"></h3>
+                <h3 id="your_url" style="color: rgb(236, 236, 236);"></h3>
                 <a href="" id="redir"><h3  id="link" style="color:#A8E890;"></h3></a>
                 <input type="submit" value="Shorten" class="submitButton" onclick="StartReq()">
             </form>
@@ -19,12 +19,12 @@
         <script>
         function StartReq(){
             var xhr = new XMLHttpRequest();
-            xhr.open("POST", "http://192.168.1.69:5555/shortener"); 
+            xhr.open("POST", "http://YOURIP:YOURPORT/shortener"); 
             xhr.onload = function(event){
                 let response = JSON.parse(event.target.response);
                 if(response['link'] != undefined) {
                     console.log(response);
-                    document.getElementById("xyz").innerHTML = "Your link:";
+                    document.getElementById("your_url").innerHTML = "Your link:";
                     document.getElementById("link").innerHTML = response['link'];
                     var link = 
                     document.getElementById("redir").setAttribute("href", response['link']);
